salesforce/force-app/main/default/objects/Contact/fields/Apollo_Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Last_Sent__c</fullName>
    <description>Date/time when the last Apollo email was sent to this contact.</description>
    <inlineHelpText>When was the last Apollo email sent?</inlineHelpText>
    <label>Apollo Last Sent</label>
    <type>DateTime</type>
</CustomField>