salesforce/force-app/main/default/objects/Contact/fields/Apollo_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Sequence__c</fullName>
    <description>Tracks which Apollo sequence the contact is enrolled in for outbound prospecting.</description>
    <inlineHelpText>Enter the name of the Apollo sequence this contact is enrolled in.</inlineHelpText>
    <label>Apollo Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>