salesforce/force-app/main/default/objects/Contact/fields/Deal_Influence__c.field-meta.xml
<CustomField>
    <fullName>Deal_Influence__c</fullName>
    <description>Captures how this contact typically influences deals. MEDDICC-aligned roles for sales intelligence. Can select multiple if contact plays multiple roles.</description>
    <label>Deal Influence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
            <value>
                <fullName>Technical Evaluator</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Legal/Procurement</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Project Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>