salesforce/force-app/main/default/objects/Contact/fields/First_Outreach_By__c.field-meta.xml
<CustomField>
    <fullName>First_Outreach_By__c</fullName>
    <description>The Business Lead who first contacted this person.</description>
    <inlineHelpText>Which Business Lead made the first contact?</inlineHelpText>
    <label>First Outreach By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts_First_Outreach</relationshipName>
    <type>Lookup</type>
</CustomField>