salesforce/force-app/main/default/objects/Contact/fields/First_Outreach_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Outreach_Date__c</fullName>
    <description>Date when this contact was first reached out to by a Business Lead.</description>
    <inlineHelpText>When was this contact first contacted?</inlineHelpText>
    <label>First Outreach Date</label>
    <type>Date</type>
</CustomField>