salesforce/force-app/main/default/objects/Contact/fields/Is_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this contact should receive invoices and billing communications. Used for Campfire integration and invoice automation.</description>
    <label>Is Billing Contact</label>
    <type>Checkbox</type>
</CustomField>