salesforce/force-app/main/default/objects/Contact/fields/LinkedIn_Headshot_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Headshot_URL__c</fullName>
    <description>URL to the contact LinkedIn profile headshot image. Populated via HTTP POST from LinkedIn data enrichment.</description>
    <label>LinkedIn Headshot URL</label>
    <type>Url</type>
</CustomField>