salesforce/force-app/main/default/objects/Contact/fields/Outreach_Source__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Source__c</fullName>
    <description>The primary outreach channel used to first contact this person.</description>
    <inlineHelpText>How was this contact first reached?</inlineHelpText>
    <label>Outreach Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Sales Navigator</fullName>
            </value>
            <value>
                <fullName>Manual Email</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>